--- a/Ansible/Backups_IOS.yml
+++ b/Ansible/Backups_IOS.yml
@@ -21,7 +21,7 @@
 #[routers:vars]
 #ansible_user=enrique   
 #ansible_password=enrique       
-#ansible_connection=network_cli
+#ansible_connection=ansible.netcommon.network_cli
 #ansible_network_os=ios
 #ansible_port=22
 
