--- a/Akamai/.edgerc
+++ b/Akamai/.edgerc
@@ -5,4 +5,5 @@ access_token = akab-zyx98xxxxxsbli4k-e7jf5ikib5jknes3
 client_token = akab-nomoxxxxxuc4422-fa2xznerxrm3teg7
 
 
-These are fake credentials. For more information, go to https://techdocs.akamai.com/developer/docs/set-up-authentication-credentials#add-credential-to-edgerc-file
+These are fake credentials. 
+For more information, go to https://techdocs.akamai.com/developer/docs/set-up-authentication-credentials#add-credential-to-edgerc-file
